--- a/gmock.conf
+++ b/gmock.conf
@@ -1,9 +1,9 @@
 #vars:
-# * file: interface file name
-# * dir: interface directory
-# * guard: header guard
-# * interface: interface class
-# * mock_methods: generated gmock methods
+# file: interface file name
+# dir: interface directory
+# guard: header guard
+# interface: interface class
+# mock_methods: generated gmock methods
 
 mock_file = "%(interface)sMock.hpp"
 
