generate: hpp and cpp

--- a/test/test.conf
+++ b/test/test.conf
@@ -1,6 +1,6 @@
-mock_file = "%(interface)s_mock.hpp"
+mock_file_hpp = "%(interface)s_mock.hpp"
 
-file_template="""\
+file_template_hpp = """\
 #ifndef %(guard)s
 #define %(guard)s
 
@@ -22,3 +22,7 @@ public:
 #endif // %(guard)s
 
 """
+
+mock_file_cpp = None
+file_template_cpp = None
+
