optional cpp generation

--- a/gmock.conf
+++ b/gmock.conf
@@ -4,6 +4,9 @@
 # guard: header guard
 # interface: interface class
 # mock_methods: generated gmock methods
+# generated_dir: generated dir
+# mock_file_hpp: mock header file 
+# mock_file_cpp: mock source file 
 
 mock_file_hpp = "%(interface)sMock.hpp"
 
@@ -31,6 +34,6 @@ public:
 
 """
 
-mock_file_cpp = None
+mock_file_cpp = ""
 file_template_cpp = None
 
