--- a/gmock.conf
+++ b/gmock.conf
@@ -1,10 +1,10 @@
-#vars:
+#possible variables:
 # file: interface file name
 # dir: interface directory
 # guard: header guard
 # interface: interface class
 # mock_methods: generated gmock methods
-# generated_dir: generated dir
+# generated_dir: generated directory
 # mock_file_hpp: mock header file 
 # mock_file_cpp: mock source file 
 
