fix #1 / Problem with generating mocks for templates.

--- a/gmock.conf
+++ b/gmock.conf
@@ -2,6 +2,8 @@
 # file: interface file name
 # dir: interface directory
 # guard: header guard
+# template: template parameters
+# template_interface: template interface class
 # interface: interface class
 # mock_methods: generated gmock methods
 # generated_dir: generated directory
@@ -22,7 +24,7 @@ file_template_hpp = """\
 
 %(namespaces_begin)s
 
-class %(interface)sMock : public %(interface)s
+%(template)sclass %(interface)sMock : public %(template_interface)s
 {
 public:
 %(mock_methods)s
