--- a/test/test.conf
+++ b/test/test.conf
@@ -9,7 +9,7 @@ file_template_hpp = """\
 
 %(namespaces_begin)s
 
-class %(interface)s_mock : public %(interface)s
+%(template)sclass %(interface)s_mock : public %(template_interface)s
 {
 public:
     %(interface)s_mock();
