Generate  gmock file & create ctor dtor

--- a/gmock.conf
+++ b/gmock.conf
@@ -10,7 +10,7 @@
 # mock_file_hpp: mock header file
 # mock_file_cpp: mock source file
 
-mock_file_hpp = "%(interface)smock.hpp"
+mock_file_hpp = "%(interface)s-gmock.h"
 
 file_template_hpp = """\
 /**
@@ -28,9 +28,12 @@ file_template_hpp = """\
 
 %(namespaces_begin)s
 
-%(template)sclass %(interface)sMock : public %(template_interface)s
+%(template)sclass %(interface)s_Mock : public %(template_interface)s
 {
 public:
+%(interface)s_Mock();
+~%(interface)s_Mock() override;
+
 %(mock_methods)s
 };
 
@@ -40,6 +43,25 @@ public:
 
 """
 
-mock_file_cpp = ""
-file_template_cpp = ""
+mock_file_cpp = "%(interface)s-gmock.cpp"
 
+file_template_cpp = """\
+/**
+ * @file    %(mock_file_cpp)s
+ * @brief   Implementation of a mock class for %(interface)s interface.
+ *
+ * @copyright Copyright (c) 2023
+ *
+ */
+
+#include <gmock/gmock.h>
+#include "%(mock_file_hpp)s"
+
+%(namespaces_begin)s
+
+%(interface)s_Mock::%(interface)s_Mock() = default;
+%(interface)s_Mock::~%(interface)s_Mock() = default;
+
+%(namespaces_end)s
+
+"""
