Substitutions now comply with our formatting standard

--- a/gmock.conf
+++ b/gmock.conf
@@ -5,12 +5,13 @@
 # template: template parameters
 # template_interface: template interface class
 # interface: interface class
+# class_name: mock class name
 # mock_methods: generated gmock methods
 # generated_dir: generated directory
 # mock_file_hpp: mock header file
 # mock_file_cpp: mock source file
 
-mock_file_hpp = "%(interface)s-gmock.h"
+mock_file_hpp = "%(mock_file_hpp)s"
 
 file_template_hpp = """\
 /**
@@ -28,11 +29,11 @@ file_template_hpp = """\
 
 %(namespaces_begin)s
 
-%(template)sclass %(interface)s_Mock : public %(template_interface)s
+%(template)sclass %(class_name)s : public %(template_interface)s
 {
 public:
-%(interface)s_Mock();
-~%(interface)s_Mock() override;
+%(class_name)s();
+~%(class_name)s() override;
 
 %(mock_methods)s
 };
@@ -43,7 +44,7 @@ public:
 
 """
 
-mock_file_cpp = "%(interface)s-gmock.cpp"
+mock_file_cpp = "%(mock_file_cpp)s"
 
 file_template_cpp = """\
 /**
@@ -59,8 +60,8 @@ file_template_cpp = """\
 
 %(namespaces_begin)s
 
-%(interface)s_Mock::%(interface)s_Mock() = default;
-%(interface)s_Mock::~%(interface)s_Mock() = default;
+%(class_name)s::%(class_name)s() = default;
+%(class_name)s::~%(class_name)s() = default;
 
 %(namespaces_end)s
 
